--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "react": "^18.3.1",
+    "framer-motion": "^12.7.4",
+    "react": "^18.2.0",
     "react-awesome-reveal": "^4.3.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-parallax": "^3.5.1",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.20.0",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
